--- a/views/partials/body-finish.html
+++ b/views/partials/body-finish.html
@@ -1,13 +1,13 @@
 <!-- jQuery -->
-<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/bower/jquery/dist/jquery.min.js"></script>
 <!-- jQuery Easing -->
-<script src="/assets/js/jquery.easing.1.3.js"></script>
+<script src="/assets/bower/jquery.easing/js/jquery.easing.js"></script>
 <!-- Bootstrap -->
-<script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- Waypoints -->
 <script src="/assets/js/jquery.waypoints.min.js"></script>
 <!-- Owl Carousel -->
-<script src="/assets/js/owl.carousel.min.js"></script>
+<script src="/assets/bower/owl.carousel/dist/owl.carousel.min.js"></script>
 
 <!-- For demo purposes only styleswitcher ( You may delete this anytime ) -->
 <script src="/assets/js/jquery.style.switcher.js"></script>
