fix the scripts

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -16,8 +16,6 @@
     <link rel="shortcut icon" href="/assets/images/favicon.ico">
 
     {% include '../partials/head.html' %}
-
-    <![endif]-->
     {% block head %}
     {% endblock %}
 </head>
@@ -25,5 +23,6 @@
 {% block content %}{% endblock %}
 
 {% include '../partials/body-finish.html' %}
+{% include '../partials/footer.html' %}
 </body>
 </html>
