--- a/views/account/pages/sign-in.html
+++ b/views/account/pages/sign-in.html
@@ -6,11 +6,19 @@
 
 {% block content %}
 {% include '../../partials/header-fix.html' %}
+
 <div id="fh5co-about-us" data-section="who-we-are">
     <div class="container">
         <div class="row row-bottom-padded-lg public-section" id="who-we-are">
             <div class="col-md-12 section-heading text-center">
-                {{ message }}
+                <h2 class="to-animate">Sign in</h2>
+
+                <div class="row">
+                    <div class="col-md-12 to-animate">
+                        <h3>Sign-in in our platform is super easy and cool. <br>All you need is to use one of social
+                            networks below to login or register for the first time</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
