--- a/views/root/pages/landing-page.html
+++ b/views/root/pages/landing-page.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 {% parent %}
-<script src="/assets/js/app/root/landing-page.js"></script>
+<script type="text/javascript" src="/assets/js/app/root/landing-page.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                                 <p class="to-animate text-right"><strong>"Casey Neistat"</strong></p>
 
                                 <p class="to-animate-2">
-                                    <a href="sign-in.html" class="btn btn-primary btn-lg">Sign in and execute your idea
+                                    <a href="/account/sign-in" class="btn btn-primary btn-lg">Sign in and execute your idea
                                         here</a>
                                 </p>
                             </div>
@@ -67,7 +67,7 @@
                                 <p class="to-animate">But you should know that we are helping you on each step</p>
 
                                 <p class="to-animate-2">
-                                    <a href="" target="_blank" class="btn btn-primary btn-lg">
+                                    <a href="/account/sign-in" class="btn btn-primary btn-lg">
                                         Sign in and execute your idea here
                                     </a>
                                 </p>
