--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -13,10 +13,18 @@
 <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
 <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
 <!-- Bootstrap  -->
-<link rel="stylesheet" href="/assets/css/bootstrap.css">
+<link rel="stylesheet" href="/assets/bower/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/css/style.css">
 
 <script src="/assets/js/modernizr-2.6.2.min.js"></script>
+<!-- jQuery -->
+<script src="/assets/bower/jquery/dist/jquery.min.js"></script>
+<script src="/assets/bower/jquery.easing/js/jquery.easing.js"></script>
+<script src="/assets/bower/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/assets/js/jquery.waypoints.min.js"></script>
+<script src="/assets/js/owl.carousel.min.js"></script>
+<script src="/assets/js/main.js"></script>
+
 <!-- FOR IE9 below -->
 <!--[if lt IE 9]>
 <script src="/assets/js/respond.min.js"></script>
