--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -23,6 +23,8 @@
 {% block content %}{% endblock %}
 
 {% include '../partials/body-finish.html' %}
+{% if !noFooter %}
 {% include '../partials/footer.html' %}
+{% endif %}
 </body>
 </html>
