--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -30,7 +30,7 @@
                         <a href="#"><span>|</span></a>
                     </li>
                     <li>
-                        <a href="/account/sign-in" class="btn"><span>Sign in</span></a>
+                        <a href="/account/sign-in" class="btn btn-lg btn-sign-in"><span>Sign in</span></a>
                     </li>
                 </ul>
             </div>
