--- a/views/account/pages/sign-in.html
+++ b/views/account/pages/sign-in.html
@@ -2,6 +2,8 @@
 
 {% block head %}
 {% parent %}
+
+<link rel="stylesheet" href="/assets/bower/bootstrap-social/bootstrap-social.css">
 {% endblock %}
 
 {% block content %}
@@ -12,11 +14,30 @@
         <div class="row row-bottom-padded-lg public-section" id="who-we-are">
             <div class="col-md-12 section-heading text-center">
                 <h2 class="to-animate">Sign in</h2>
-
                 <div class="row">
                     <div class="col-md-12 to-animate">
                         <h3>Sign-in in our platform is super easy and cool. <br>All you need is to use one of social
                             networks below to login or register for the first time</h3>
+                        <br>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="col-md-4 col-md-offset-4  to-animate">
+                        <a class="btn btn-lg btn-block btn-social btn-google" href="/account/sign-in/google">
+                            <span class="fa fa-google"></span>
+                            Sign in with Google
+                        </a>
+                        <a class="btn btn-lg btn-block btn-social btn-facebook" disabled="">
+                            <span class="fa fa-facebook"></span>
+                            Sign in with Facebook
+                        </a>
+                        <a class="btn btn-lg btn-block btn-social btn-twitter" disabled="">
+                            <span class="fa fa-twitter"></span>
+                            Sign in with Twitter
+                        </a>
+                        <a class="btn btn-lg btn-block btn-social btn-github" disabled="">
+                            <span class="fa fa-github"></span>
+                            Sign in with Github
+                        </a>
                     </div>
                 </div>
             </div>
