--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
 <!-- Bootstrap  -->
 <link rel="stylesheet" href="/assets/bower/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/bower/components-font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="/assets/css/style.css">
 
 <script src="/assets/js/modernizr-2.6.2.min.js"></script>
