data schema for user collection

--- a/views/account/pages/sign-in.html
+++ b/views/account/pages/sign-in.html
@@ -26,18 +26,18 @@
                             <span class="fa fa-google"></span>
                             Sign in with Google
                         </a>
-                        <a class="btn btn-lg btn-block btn-social btn-facebook" disabled="">
-                            <span class="fa fa-facebook"></span>
-                            Sign in with Facebook
-                        </a>
-                        <a class="btn btn-lg btn-block btn-social btn-twitter" disabled="">
-                            <span class="fa fa-twitter"></span>
-                            Sign in with Twitter
-                        </a>
-                        <a class="btn btn-lg btn-block btn-social btn-github" disabled="">
-                            <span class="fa fa-github"></span>
-                            Sign in with Github
-                        </a>
+                        <!--<a class="btn btn-lg btn-block btn-social btn-facebook" disabled="">-->
+                            <!--<span class="fa fa-facebook"></span>-->
+                            <!--Sign in with Facebook-->
+                        <!--</a>-->
+                        <!--<a class="btn btn-lg btn-block btn-social btn-twitter" disabled="">-->
+                            <!--<span class="fa fa-twitter"></span>-->
+                            <!--Sign in with Twitter-->
+                        <!--</a>-->
+                        <!--<a class="btn btn-lg btn-block btn-social btn-github" disabled="">-->
+                            <!--<span class="fa fa-github"></span>-->
+                            <!--Sign in with Github-->
+                        <!--</a>-->
                     </div>
                 </div>
             </div>
