--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -26,6 +26,14 @@
 <script src="/assets/js/owl.carousel.min.js"></script>
 <script src="/assets/js/main.js"></script>
 
+<script src="/assets/node/es6-shim/es6-shim.min.js"></script>
+<script src="/assets/node/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+
+<script src="/assets/node/angular2/bundles/angular2-polyfills.js"></script>
+<script src="/assets/node/rxjs/bundles/Rx.umd.js"></script>
+<script src="/assets/node/angular2/bundles/angular2-all.umd.js"></script>
+
+
 <!-- FOR IE9 below -->
 <!--[if lt IE 9]>
 <script src="/assets/js/respond.min.js"></script>
