--- a/views/account/pages/activation/account.html
+++ b/views/account/pages/activation/account.html
@@ -4,6 +4,8 @@
 {% parent %}
 
 <link rel="stylesheet" href="/assets/bower/bootstrap-social/bootstrap-social.css">
+
+<script src='/assets/js/app/activation/account.js'></script>
 {% endblock %}
 
 {% block content %}
@@ -13,12 +15,10 @@
     <div class="container">
         <div class="row row-bottom-padded-lg public-section" id="who-we-are">
             <div class="col-md-12 section-heading text-center">
-                <h2 class="to-animate">Account</h2>
+                <h2>Account</h2>
                 <div class="row">
-                    <div class="col-md-12 to-animate">
-                        <h3>
-                        </h3>
-                        <br>
+                    <div class="col-md-12">
+                        <page-activation-account>Loading</page-activation-account>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -26,4 +26,8 @@
         </div>
     </div>
 </div>
+
+<script type="text/ng-template" id="/activation-account-wrapper.tpl">
+hello test
+</script>
 {% endblock %}
