--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -18,6 +18,8 @@
     {% include '../partials/head.html' %}
     {% block head %}
     {% endblock %}
+    <script src='/assets/js/app/main.js'></script>
+    <script src='/assets/js/app/prod.js'></script>
 </head>
 <body>
 {% block content %}{% endblock %}
