--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -19,9 +19,8 @@
     {% block head %}
     {% endblock %}
     <script src='/assets/js/app/main.js'></script>
-    <script src='/assets/js/app/prod.js'></script>
 </head>
-<body>
+<body ng-app="deeployer">
 {% block content %}{% endblock %}
 
 {% include '../partials/body-finish.html' %}
