--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -26,12 +26,8 @@
 <script src="/assets/js/owl.carousel.min.js"></script>
 <script src="/assets/js/main.js"></script>
 
-<script src="/assets/node/es6-shim/es6-shim.min.js"></script>
-<script src="/assets/node/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-
-<script src="/assets/node/angular2/bundles/angular2-polyfills.js"></script>
-<script src="/assets/node/rxjs/bundles/Rx.umd.js"></script>
-<script src="/assets/node/angular2/bundles/angular2-all.umd.js"></script>
+<!-- AngularJs -->
+<script src="/assets/bower/angular/angular.min.js"></script>
 
 
 <!-- FOR IE9 below -->
