--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -3,6 +3,8 @@
         rel='stylesheet'
         type='text/css'>
 
+
+<link rel="stylesheet" href="/assets/css/loading.css">
 <!-- Animate.css -->
 <link rel="stylesheet" href="/assets/css/animate.css">
 <!-- Icomoon Icon Fonts-->
