--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -19,6 +19,7 @@
     {% include '../partials/head.html' %}
     {% block head %}
     {% endblock %}
+    <script src='/assets/js/app/directives.js'></script>
 </head>
 <body ng-app="deeployer">
     {% block content %}{% endblock %}
