--- a/assets/sass/loading.scss
+++ b/assets/sass/loading.scss
@@ -1,367 +1,84 @@
-/* Clear Loading */
-.clear-loading {
-  text-align: center;
-  margin: 0 auto;
-  position: relative;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
+
+.cssload-container{
+  position:relative;
 }
-/* Loading Effect One */
-.loading-effect-1 {
-  width: 100px;
-  height: 100px;
-}
-.loading-effect-1 span {
-  display: block;
-  -webit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%;
-  border: 4px solid #fff;
+
+.cssload-whirlpool,
+.cssload-whirlpool::before,
+.cssload-whirlpool::after {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  border: 1px solid rgb(204,204,204);
+  border-left-color: rgb(0,0,0);
+  border-radius: 1374px;
+    -o-border-radius: 1374px;
+    -ms-border-radius: 1374px;
+    -webkit-border-radius: 1374px;
+    -moz-border-radius: 1374px;
 }
-.loading-effect-1 span:first-child {
-  width: 100%;
-  height: 100%;
-  border-color: #19be9b;
-  border-left-color: transparent;
-  top: 0;
-  left: 0;
-  -webkit-animation: effect-1-1 4s infinite linear;
-  -moz-animation: effect-1-1 4s infinite linear;
-  -ms-animation: effect-1-1 4s infinite linear;
-  -o-animation: effect-1-1 4s infinite linear;
-  animation: effect-1-1 4s infinite linear;
+
+.cssload-whirlpool {
+  margin: -37px 0 0 -37px;
+    height: 22px;
+    width: 22px;
+  animation: cssload-rotate 1450ms linear infinite;
+    -o-animation: cssload-rotate 1450ms linear infinite;
+    -ms-animation: cssload-rotate 1450ms linear infinite;
+    -webkit-animation: cssload-rotate 1450ms linear infinite;
+    -moz-animation: cssload-rotate 1450ms linear infinite;
 }
-.loading-effect-1 span:nth-child(2) {
-  width: 75%;
-  height: 75%;
-  border-color: #e64b3c;
-  border-right-color: transparent;
-  top: 12.5%;
-  left: 12.5%;
-  -webkit-animation: effect-1-2 3s infinite linear;
-  -moz-animation: effect-1-2 3s infinite linear;
-  -ms-animation: effect-1-2 3s infinite linear;
-  -o-animation: effect-1-2 3s infinite linear;
-  animation: effect-1-2 3s infinite linear;
+
+.cssload-whirlpool::before {
+  content: "";    
+  margin: -9px 0 0 -9px;
+    height: 17PX;
+    width: 17px;
+  animation: cssload-rotate 1450ms linear infinite;
+    -o-animation: cssload-rotate 1450ms linear infinite;
+    -ms-animation: cssload-rotate 1450ms linear infinite;
+    -webkit-animation: cssload-rotate 1450ms linear infinite;
+    -moz-animation: cssload-rotate 1450ms linear infinite;
 }
-.loading-effect-1 span:last-child {
-  width: 50%;
-  height: 50%;
-  border-color: #32465f;
-  border-bottom-color: transparent;
-  top: 25%;
-  left: 25%;
-  -webkit-animation: effect-1-1 4s infinite linear;
-  -moz-animation: effect-1-1 4s infinite linear;
-  -ms-animation: effect-1-1 4s infinite linear;
-  -o-animation: effect-1-1 4s infinite linear;
-  animation: effect-1-1 4s infinite linear;
-}
-@-webkit-keyframes effect-1-1 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes effect-1-1 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes effect-1-2 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(-360deg);
-    -moz-transform: rotate(-360deg);
-    -ms-transform: rotate(-360deg);
-    -o-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
-}
-@keyframes effect-1-2 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(-360deg);
-    -moz-transform: rotate(-360deg);
-    -ms-transform: rotate(-360deg);
-    -o-transform: rotate(-360deg);
-    transform: rotate(-360deg);
-  }
-}
-/* Loading Effect Two */
-.loading-effect-2 {
-  width: 100px;
-  height: 100px;
-}
-.loading-effect-2 > span,
-.loading-effect-2 > span:before,
-.loading-effect-2 > span:after {
+
+.cssload-whirlpool::after {
   content: "";
-  display: block;
-  border-radius: 50%;
-  border: 2px solid #fff;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  margin: -6px 0 0 -6px;
+    height: 10px;
+    width: 10px;
+  animation: cssload-rotate 2900ms linear infinite;
+    -o-animation: cssload-rotate 2900ms linear infinite;
+    -ms-animation: cssload-rotate 2900ms linear infinite;
+    -webkit-animation: cssload-rotate 2900ms linear infinite;
+    -moz-animation: cssload-rotate 2900ms linear infinite;
 }
-.loading-effect-2 > span {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  border-left-color: transparent;
-  -webkit-animation: effect-2 2s infinite linear;
-  -moz-animation: effect-2 2s infinite linear;
-  -ms-animation: effect-2 2s infinite linear;
-  -o-animation: effect-2 2s infinite linear;
-  animation: effect-2 2s infinite linear;
-}
-.loading-effect-2 > span:before {
-  width: 75%;
-  height: 75%;
-  border-right-color: transparent;
-}
-.loading-effect-2 > span:after {
-  width: 50%;
-  height: 50%;
-  border-bottom-color: transparent;
-}
-@-webkit-keyframes effect-2 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
+
+@keyframes cssload-rotate {
+  100% {
     transform: rotate(360deg);
   }
 }
-@keyframes effect-2 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
+
+@-o-keyframes cssload-rotate {
+  100% {
     -o-transform: rotate(360deg);
-    transform: rotate(360deg);
   }
 }
-/* Loading Effect Three */
-.loading-effect-3 {
-  width: 100px;
-  height: 100px;
-}
-.loading-effect-3 div {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: 1px solid #fff;
-  border-radius: 50%;
-}
-.loading-effect-3 div > span {
-  background: #fff;
-  width: 10px;
-  height: 10px;
-  display: block;
-  border-radius: 50%;
-  position: relative;
-  top: -5px;
-  left: 50%;
-  -webikt-transform-origin: 0 55px;
-  -moz-transform-origin: 0 55px;
-  -o-transform-origin: 0 55px;
-  transform-origin: 0 55px;
-  -webkit-animation: effect-3 2s infinite linear;
-  -moz-animation: effect-3 2s infinite linear;
-  -ms-animation: effect-3 2s infinite linear;
-  -o-animation: effect-3 2s infinite linear;
-  animation: effect-3 2s infinite linear;
-}
-@-webkit-keyframes effect-3 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
+
+@-ms-keyframes cssload-rotate {
+  100% {
     -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
   }
 }
-@keyframes effect-3 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
+
+@-webkit-keyframes cssload-rotate {
+  100% {
     -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes cssload-rotate {
+  100% {
     -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-/* Loading Effect Four */
-.loading-effect-4 {
-  width: 100px;
-  height: 100px;
-}
-.loading-effect-4 > div {
-  width: 100%;
-  height: 100%;
-  border: 1px solid #fff;
-  border-radius: 50%;
-}
-.loading-effect-4 span {
-  background: #fff;
-  display: block;
-  width: 15%;
-  height: 15%;
-  border-radius: 50%;
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-  -moz-transform: translate(-50%, 0);
-  -ms-transform: translate(-50%, 0);
-  -o-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
-  -webikt-transform-origin: 0 49px;
-  -moz-transform-origin: 0 49px;
-  -o-transform-origin: 0 49px;
-  transform-origin: 0 49px;
-}
-.loading-effect-4 span:first-child {
-  background: #19be9b;
-  -webkit-animation: effect-4-1 1.5s infinite linear;
-  -moz-animation: effect-4-1 1.5s infinite linear;
-  -ms-animation: effect-4-1 1.5s infinite linear;
-  -o-animation: effect-4-1 1.5s infinite linear;
-  animation: effect-4-1 1.5s infinite linear;
-}
-.loading-effect-4 span:nth-child(2) {
-  background: #ffffff;
-  -webkit-animation: effect-4-1 2s infinite linear;
-  -moz-animation: effect-4-1 2s infinite linear;
-  -ms-animation: effect-4-1 2s infinite linear;
-  -o-animation: effect-4-1 2s infinite linear;
-  animation: effect-4-1 2s infinite linear;
-}
-.loading-effect-4 span:nth-child(3) {
-  background: #e64b3c;
-  -webkit-animation: effect-4-1 2.5s infinite linear;
-  -moz-animation: effect-4-1 2.5s infinite linear;
-  -ms-animation: effect-4-1 2.5s infinite linear;
-  -o-animation: effect-4-1 2.5s infinite linear;
-  animation: effect-4-1 2.5s infinite linear;
-}
-.loading-effect-4 span:nth-child(4) {
-  background: #32465f;
-  -webkit-animation: effect-4-1 3s infinite linear;
-  -moz-animation: effect-4-1 3s infinite linear;
-  -ms-animation: effect-4-1 3s infinite linear;
-  -o-animation: effect-4-1 3s infinite linear;
-  animation: effect-4-1 3s infinite linear;
-}
-@-webkit-keyframes effect-4-1 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes effect-4-1 {
-  from {
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
   }
 }
