--- a/views/account/pages/activation/account.html
+++ b/views/account/pages/activation/account.html
@@ -23,15 +23,24 @@
                             </p>
                             <div class="avatar-wrapper">
                                 <img
+                                    ng-mouseover="editIconStatus = true" 
+                                    ng-mouseleave="editIconStatus = false"
                                     ng-src="{{ avatar }}"
                                     ng-click="avatarClick()"
                                     class="img-thumbnail avatar"
                                     alt="avatar"
                                     title="avatar"
-                                    width="200px">
+                                    width="200px"
+                                    height="200px"
+                                    image-onload-waiting>
                                 <i
+                                    ng-mouseover="editIconStatus = true" 
+                                    ng-show="!waiting && editIconStatus"
                                     ng-click="avatarClick()"
                                     class="glyphicon glyphicon-edit"></i>
+                                <div ng-show="waiting" class="cssload-container">
+                                    <div class="cssload-whirlpool"></div>
+                                </div>
                             </div>
                             <br>
                             <input
