error message text

--- a/views/account/pages/activation/account.html
+++ b/views/account/pages/activation/account.html
@@ -50,8 +50,7 @@
                                 ng-model="username"
                                 required="required"
                                 placeholder="@Username">
-
-                            <p>{{ picValidationText }}</p>
+                            <p class="text-danger">{{ picValidationText }}</p>
                             <br>
                             <a
                                 href="/account/activation"
@@ -71,5 +70,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
