--- a/views/account/pages/activation/account.html
+++ b/views/account/pages/activation/account.html
@@ -6,6 +6,10 @@
 <script src='/assets/js/app/account/activation/account.js'></script>
 {% endblock %}
 
+{% block angularSection %}
+    ng-app="deeployer"
+{% endblock %}
+
 {% block content %}
 {% include '../../../partials/header-fix-sign-in.html' %}
 
