--- a/views/account/pages/sign-out.html
+++ b/views/account/pages/sign-out.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% include '../../partials/header-fix.html' %}
 
-<div id="fh5co-about-us" data-section="who-we-are">
+<div id="fh5co-about-us">
     <div class="container">
         <div class="row row-bottom-padded-lg public-section" id="who-we-are">
             <div class="col-md-12 section-heading text-center">
